# dlopen-regex

./: .clang-format  CMakeLists.txt  final.cpp  foo.cpp  main.cpp  middle.cpp  middle.hpp
